@@ -4,7 +4,11 @@ import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.core.type.TypeReference;
 import com.fasterxml.jackson.databind.JavaType;
 import com.fasterxml.jackson.databind.ObjectMapper;
-import dev.langchain4j.agent.tool.*;
+import dev.langchain4j.agent.tool.P;
+import dev.langchain4j.agent.tool.Tool;
+import dev.langchain4j.agent.tool.ToolExecutionRequest;
+import dev.langchain4j.agent.tool.ToolSpecification;
+import dev.langchain4j.agent.tool.ToolSpecifications;
 import dev.langchain4j.data.message.AiMessage;
 import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Method;
@@ -18,15 +22,12 @@ import org.apache.logging.log4j.Logger;
 import org.jetbrains.annotations.Nullable;
 
 /**
- * Discovers, registers, provides specifications for, and executes tools. Tools are methods annotated with @Tool on
- * registered object instances.
+ * Discovers, registers, provides specifications for, and executes tools.
+ * Tools are methods annotated with @Tool on registered object instances.
  *
- * Notes:
- * - ToolRegistry now supports creating a local copy via copy() which inherits the current registry entries but does
- *   not re-run root-only registrations. The "root" registry (created via the no-arg constructor) is the only registry
- *   that auto-registers built-in tools (like 'think') by registering itself.
- * - Local registries (copies) allow overriding previously-registered tool names; the last registration wins for local
- *   registries. When an override happens, a debug log message records the shadowing.
+ * Builder pattern:
+ * - Create per-turn registries via ToolRegistry.builder(base).register(...).build()
+ * - Built registries are sealed (immutable) and cannot be mutated.
  */
 public class ToolRegistry {
     private static final Logger logger = LogManager.getLogger(ToolRegistry.class);
@@ -34,35 +35,22 @@ public class ToolRegistry {
 
     // Backing map for tools. Use a synchronized LinkedHashMap for deterministic ordering while remaining thread-safe.
     private final Map<String, ToolInvocationTarget> toolMap;
-    private final boolean isRoot;
 
-    /** Generates a user-friendly explanation for a tool request as a Markdown code fence with YAML formatting. */
-    public String getExplanationForToolRequest(Object toolOwner, ToolExecutionRequest request) {
-        // Skip empty explanations for answer/abort
-        if (request.name().equals("answerSearch") || request.name().equals("abortSearch")) {
-            return "";
-        }
-        try {
-            // Resolve target and perform typed conversion via validateTool
-            var vi = validateTool(toolOwner, request);
-            var argsYaml = toYaml(vi);
-            var headline = headlineFor(request.name());
+    // Internal record to hold method and the instance it belongs to
+    private record ToolInvocationTarget(Method method, Object instance) {}
 
-            return """
-                   ### %s
-                   ```yaml
-                   %s```
-                   """
-                    .formatted(headline, argsYaml);
-        } catch (ToolValidationException e) {
-            // Log validation error but don't crash - this is just for display
-            logger.warn("Invalid tool request for display: {} - {}", request.name(), e.getMessage());
-            logger.debug("Full tool request: {}", request.arguments());
+    public record ValidatedInvocation(Method method, Object instance, List<Object> parameters) {}
 
-            // Return empty string - validation details are logged, not shown to user
-            return "";
+    public static class ToolValidationException extends RuntimeException {
+        public ToolValidationException(String message) {
+            super(message);
         }
     }
+
+    /**
+     * Minimal atomic signature unit for duplicate detection
+     */
+    public record SignatureUnit(String toolName, String paramName, Object item) {}
 
     /** Mapping of tool names to display headlines (icons removed). */
     private static final Map<String, String> HEADLINES = Map.ofEntries(
@@ -100,46 +88,7 @@ public class ToolRegistry {
         return HEADLINES.getOrDefault(toolName, toolName);
     }
 
-    // Internal record to hold method and the instance it belongs to
-    private record ToolInvocationTarget(Method method, Object instance) {}
-
-    public record ValidatedInvocation(Method method, Object instance, List<Object> parameters) {}
-
-    public static class ToolValidationException extends RuntimeException {
-        public ToolValidationException(String message) {
-            super(message);
-        }
-    }
-
-    /**
-     * Minimal atomic signature unit for duplicate detection: - toolName: the tool being invoked - paramName: the list
-     * parameter that was sliced - item: the single item from that list parameter
-     */
-    public record SignatureUnit(String toolName, String paramName, Object item) {}
-
-    /**
-     * Returns true if the given tool is a workspace-mutation tool that should never be deduplicated. This is an
-     * explicit whitelist so new tools are safe-by-default.
-     */
-    public boolean isWorkspaceMutationTool(String toolName) {
-        return Set.of(
-                        "addFilesToWorkspace",
-                        "addClassesToWorkspace",
-                        "addUrlContentsToWorkspace",
-                        "addTextToWorkspace",
-                        "addSymbolUsagesToWorkspace",
-                        "addClassSummariesToWorkspace",
-                        "addFileSummariesToWorkspace",
-                        "addMethodsToWorkspace",
-                        "addCallGraphInToWorkspace",
-                        "addCallGraphOutToWorkspace",
-                        "dropWorkspaceFragments")
-                .contains(toolName);
-    }
-
-    /**
-     * Helper to render a simple YAML block from a validated invocation.
-     */
+    /** Helper to render a simple YAML block from a validated invocation. */
     private static String toYaml(ValidatedInvocation vi) {
         var named = new LinkedHashMap<String, Object>();
         var params = vi.method().getParameters();
@@ -171,38 +120,73 @@ public class ToolRegistry {
 
     /** Creates a new root ToolRegistry and self-registers internal tools. */
     public ToolRegistry() {
-        this(new LinkedHashMap<>(), true);
+        this(new LinkedHashMap<>());
         // Root-only registration of builtin tools (like 'think') happens only for the root registry.
         register(this);
     }
 
     /**
-     * Private constructor used for creating copies and initializing the registry storage.
+     * Private constructor used for initializing the registry storage.
      *
      * @param initialMap initial content to seed the registry with (will be copied)
-     * @param isRoot     whether this registry is the root/global registry; the root preserves strict duplicate checks
      */
-    private ToolRegistry(Map<String, ToolInvocationTarget> initialMap, boolean isRoot) {
+    private ToolRegistry(Map<String, ToolInvocationTarget> initialMap) {
         this.toolMap = Collections.synchronizedMap(new LinkedHashMap<>(initialMap));
-        this.isRoot = isRoot;
     }
 
-    /** Create an independent local copy of this registry. The copy will not re-run root-only registrations. */
-    public ToolRegistry copy() {
-        synchronized (toolMap) {
-            return new ToolRegistry(new LinkedHashMap<>(this.toolMap), false);
-        }
-    }
-
+    /** Returns an empty, sealed root registry (primarily for tests). */
     public static ToolRegistry empty() {
-        return new ToolRegistry(Map.of(), true);
+        return new ToolRegistry(Map.of());
     }
 
-    /** Generates ToolSpecifications for the given list of tool names.
-     *
-     * @param toolNames A list of tool names to get specifications for.
-     * @return A list of ToolSpecification objects. Returns an empty list if a name is not found.
-     */
+    /** Builder for creating a sealed local registry based on a base registry. */
+    public static Builder builder(ToolRegistry base) {
+        return new Builder(base);
+    }
+
+    /** Instance builder to avoid FQN/import issues at call sites. */
+    public Builder builder() {
+        return new Builder(this);
+    }
+
+    public static final class Builder {
+        private final Map<String, ToolInvocationTarget> entries;
+
+        private Builder(ToolRegistry base) {
+            synchronized (base.toolMap) {
+                this.entries = new LinkedHashMap<>(base.toolMap);
+            }
+        }
+
+        /** Register @Tool methods from the given instance; last registration wins on name conflicts. */
+        public Builder register(Object toolProviderInstance) {
+            Class<?> clazz = toolProviderInstance.getClass();
+            for (Method method : clazz.getMethods()) {
+                if (!method.isAnnotationPresent(Tool.class)) continue;
+                String toolName = method.getName();
+                var existing = entries.get(toolName);
+                if (existing != null) {
+                    logger.debug(
+                            "Overriding tool {} provided by {} with {}",
+                            toolName,
+                            existing.instance().getClass().getName(),
+                            toolProviderInstance.getClass().getName());
+                } else {
+                    logger.debug("Registering tool: '{}' from class {}", toolName, clazz.getName());
+                }
+                entries.put(toolName, new ToolInvocationTarget(method, toolProviderInstance));
+            }
+            return this;
+        }
+
+        /** Build a sealed, non-root ToolRegistry with the accumulated entries. */
+        public ToolRegistry build() {
+            return new ToolRegistry(entries);
+        }
+        // fluent register chaining supported by returning Builder
+    }
+
+    /** Generates ToolSpecifications for the given list of tool names. */
     public List<ToolSpecification> getTools(List<String> toolNames) {
         var present = toolNames.stream().filter(toolMap::containsKey).toList();
         var missing = toolNames.stream().filter(t -> !toolMap.containsKey(t)).toList();
@@ -227,31 +211,17 @@ public class ToolRegistry {
         return toolMap.containsKey(toolName);
     }
 
-    /**
-     * Generates ToolSpecifications for tool methods defined as instance methods within a given object. This is useful
-     * for agent-specific tools (like answer/abort) defined within an agent instance.
-     *
-     * @param instance The object containing the @Tool annotated instance methods.
-     * @param toolNames The names of the tools to get specifications for.
-     * @return A list of ToolSpecification objects. Returns an empty list if a name is not found or the method doesn't
-     *     match.
-     */
+    /** Generates ToolSpecifications for tool methods defined as instance methods within a given object. */
     public List<ToolSpecification> getTools(Object instance, Collection<String> toolNames) {
         Class<?> cls = instance.getClass();
-
-        // Gather all instance methods declared in the class that are annotated with @Tool.
         List<Method> annotatedMethods = Arrays.stream(cls.getDeclaredMethods())
                 .filter(m -> m.isAnnotationPresent(Tool.class))
                 .filter(m -> !Modifier.isStatic(m.getModifiers()))
                 .toList();
 
-        // For each toolName, directly find the corresponding method and generate its specification.
         return toolNames.stream()
                 .map(toolName -> annotatedMethods.stream()
-                        .filter(m -> {
-                            String name = m.getName();
-                            return name.equals(toolName);
-                        })
+                        .filter(m -> m.getName().equals(toolName))
                         .findFirst()
                         .orElseThrow(() -> new IllegalArgumentException(
                                 "No tool method found for %s in %s".formatted(toolName, instance))))
@@ -259,12 +229,7 @@ public class ToolRegistry {
                 .collect(Collectors.toList());
     }
 
-    /**
-     * Executes a tool exclusively from the global registry (no instance tools).
-     *
-     * @param request The ToolExecutionRequest from the LLM.
-     * @return A ToolExecutionResult indicating success or failure.
-     */
+    /** Executes a tool exclusively from the registry (no instance tools). */
     public ToolExecutionResult executeTool(ToolExecutionRequest request) throws InterruptedException {
         ValidatedInvocation validated;
         try {
@@ -281,7 +246,6 @@ public class ToolRegistry {
             String resultString = resultObject != null ? resultObject.toString() : "";
             return ToolExecutionResult.success(request, resultString);
         } catch (InvocationTargetException e) {
-            // some code paths will wrap IE in RuntimeException, so check the entire Cause hierarchy
             for (var e2 = (Throwable) e; e2 != null; e2 = e2.getCause()) {
                 if (e2 instanceof InterruptedException ie) {
                     throw ie;
@@ -293,64 +257,29 @@ public class ToolRegistry {
         }
     }
 
-    /**
-     * Removes duplicate ToolExecutionRequests from an AiMessage. Duplicates are identified by having the same tool name
-     * and arguments. The order of the remaining requests is preserved from the first occurrence.
-     *
-     * @param message The input AiMessage.
-     * @return A new AiMessage with duplicate tool requests removed, or the original message if no requests were present
-     *     or no duplicates found.
-     */
+    /** Remove duplicate ToolExecutionRequests from an AiMessage while preserving order. */
     public static AiMessage removeDuplicateToolRequests(AiMessage message) {
         if (!message.hasToolExecutionRequests()) {
             return message;
         }
-
         var deduplicated = List.copyOf(new LinkedHashSet<>(message.toolExecutionRequests()));
-
-        // If no duplicates were found, return the original message
         if (deduplicated.size() == message.toolExecutionRequests().size()) {
             return message;
         }
-
-        // Create a new AiMessage with the unique requests
         return AiMessage.from(message.text(), deduplicated);
     }
 
-    /**
-     * A tool for thinking through complex problems step by step. This allows the model to break down its reasoning
-     * process explicitly.
-     */
     @Tool(
             """
     Think carefully step by step about a complex problem. Use this tool to reason through difficult questions
     or break problems into smaller pieces. Call it concurrently with other tools.
     """)
     public String think(@P("The step-by-step reasoning to work through") String reasoning) {
-        // Llm special-cases this tool, but we need to return a value so the execution request is happy
         return "Good thinking.";
     }
 
-    /**
-     * Registers all methods annotated with @Tool from the given object instance.
-     *
-     * @param toolProviderInstance An instance of a class containing methods annotated with @Tool.
-     */
+    /** Register @Tool methods from the given instance (allowed only when not sealed). */
     public void register(Object toolProviderInstance) {
-        // For root registries, we keep strict duplicate checking (existing behavior).
-        // For non-root (local) registries we allow overrides (last-wins).
-        registerInternal(toolProviderInstance, !isRoot);
-    }
-
-    /**
-     * Internal registration routine which supports optional override semantics.
-     *
-     * @param toolProviderInstance The provider instance containing @Tool methods.
-     * @param allowOverride        When true, existing tool registrations with the same name will be replaced
-     *                             and a DEBUG log entry will be emitted. When false, duplicate registrations
-     *                             will cause IllegalArgumentException (legacy/root behavior).
-     */
-    private void registerInternal(Object toolProviderInstance, boolean allowOverride) {
         Class<?> clazz = toolProviderInstance.getClass();
 
         for (Method method : clazz.getMethods()) {
@@ -361,16 +290,10 @@ public class ToolRegistry {
 
             synchronized (toolMap) {
                 if (toolMap.containsKey(toolName)) {
-                    if (!allowOverride) {
-                        throw new IllegalArgumentException(
-                                "Duplicate tool name registration attempted: '%s'".formatted(toolName));
-                    } else {
-                        var existing = toolMap.get(toolName);
-                        var existingClass = existing.instance().getClass().getName();
-                        var providerClass = toolProviderInstance.getClass().getName();
-                        logger.debug(
-                                "Overriding tool {} provided by {} with {}", toolName, existingClass, providerClass);
-                    }
+                    var existing = toolMap.get(toolName);
+                    var existingClass = existing.instance().getClass().getName();
+                    var providerClass = toolProviderInstance.getClass().getName();
+                    logger.debug("Overriding tool {} provided by {} with {}", toolName, existingClass, providerClass);
                 } else {
                     logger.debug("Registering tool: '{}' from class {}", toolName, clazz.getName());
                 }
@@ -379,35 +302,24 @@ public class ToolRegistry {
         }
     }
 
-    /**
-     * Validates a tool request against the provided instance's @Tool methods (falling back to this registry).
-     * This method first looks for instance methods on the provided instance; if none found it falls back to the
-     * registry contents.
-     */
-    /**
-     * Validates a tool request against the provided instance's @Tool methods (falling back to this registry).
-     * Instance methods take precedence; if not found on the instance, falls back to the global registry.
-     */
+    /** Validate against provided instance first, then fall back to this registry. */
     public ValidatedInvocation validateTool(Object toolOwner, ToolExecutionRequest request) {
         String toolName = request.name();
         if (toolName.isBlank()) {
             throw new ToolValidationException("Tool name cannot be empty");
         }
-        if (toolOwner != null) {
-            // Search for a matching @Tool instance method on the owner first
-            for (Method m : toolOwner.getClass().getMethods()) {
-                if (m.isAnnotationPresent(Tool.class)
-                        && !Modifier.isStatic(m.getModifiers())
-                        && m.getName().equals(toolName)) {
-                    var args = parseArguments(request, m);
-                    return new ValidatedInvocation(m, toolOwner, args);
-                }
+        for (Method m : toolOwner.getClass().getMethods()) {
+            if (m.isAnnotationPresent(Tool.class)
+                    && !Modifier.isStatic(m.getModifiers())
+                    && m.getName().equals(toolName)) {
+                var args = parseArguments(request, m);
+                return new ValidatedInvocation(m, toolOwner, args);
             }
         }
-        // Fallback to the registry
         return validateTool(request);
     }
 
+    /** Validate against this registry. */
     public ValidatedInvocation validateTool(ToolExecutionRequest request) {
         String toolName = request.name();
         if (toolName.isBlank()) {
@@ -442,11 +354,9 @@ public class ToolRegistry {
 
                 var paramType = param.getParameterizedType();
                 if (paramType instanceof ParameterizedType) {
-                    // Preserve generic information (e.g., List<String>) when converting
                     JavaType javaType = typeFactory.constructType(paramType);
                     converted = OBJECT_MAPPER.convertValue(argValue, javaType);
 
-                    // If this is a collection-like type with a specific element type, validate element types
                     if (javaType.isCollectionLikeType()) {
                         JavaType contentType = javaType.getContentType();
                         Class<?> contentClass = contentType.getRawClass();
@@ -459,14 +369,10 @@ public class ToolRegistry {
                                                         .formatted(
                                                                 param.getName(),
                                                                 contentClass.getName(),
-                                                                elem == null
-                                                                        ? "null"
-                                                                        : elem.getClass()
-                                                                                .getName()));
+                                                                elem.getClass().getName()));
                                     }
                                 }
                             } else if (converted != null && !contentClass.isInstance(converted)) {
-                                // Handle non-collection cases conservatively
                                 throw new ToolValidationException("Parameter '%s' expected value of type %s but got %s"
                                         .formatted(
                                                 param.getName(),
@@ -476,7 +382,6 @@ public class ToolRegistry {
                         }
                     }
                 } else {
-                    // Non-parameterized types (or primitives) - fall back to raw type conversion
                     converted = OBJECT_MAPPER.convertValue(argValue, param.getType());
                 }
 
@@ -488,20 +393,14 @@ public class ToolRegistry {
         }
     }
 
-    /**
-     * Generates a user-friendly explanation for a tool request as a Markdown code fence with YAML formatting,
-     * validating the request against THIS registry (no owner).
-     */
+    /** Generates a user-friendly explanation for a tool request validated against THIS registry. */
     public String getExplanationForToolRequest(ToolExecutionRequest request) {
-        // Skip empty explanations for answer/abort
         if (request.name().equals("answerSearch") || request.name().equals("abortSearch")) {
             return "";
         }
-
         var vi = validateTool(request);
         var argsYaml = toYaml(vi);
         var headline = headlineFor(request.name());
-
         return """
                ### %s
                ```yaml
@@ -510,14 +409,7 @@ public class ToolRegistry {
                 .formatted(headline, argsYaml);
     }
 
-    /**
-     * Produces a list of SignatureUnit objects for the provided request by validating the request against the target
-     * method and inspecting the typed parameters.
-     *
-     * <p>Constraints for dedupe: - The target method must have exactly one parameter whose runtime value is a
-     * Collection. - Each element in that collection must be a primitive wrapper, String, or other simple scalar.
-     * Otherwise, throws IllegalArgumentException to signal unsupported pattern for dedupe.
-     */
+    /** Deduplication helper producing one signature unit per element of the single list param. */
     public List<SignatureUnit> signatureUnits(Object instance, ToolExecutionRequest request) {
         String toolName = request.name();
 
@@ -526,7 +418,6 @@ public class ToolRegistry {
         Parameter[] params = method.getParameters();
         List<Object> values = vi.parameters();
 
-        // Identify collection-like parameters (by runtime value)
         List<Integer> collectionIndices = new ArrayList<>();
         for (int i = 0; i < values.size(); i++) {
             if (values.get(i) instanceof Collection<?>) {
@@ -539,36 +430,29 @@ public class ToolRegistry {
                     + "' must have exactly one list parameter for dedupe; found " + collectionIndices.size());
         }
 
-        int sliceIdx = collectionIndices.get(0);
+        int sliceIdx = collectionIndices.getFirst();
         String sliceName = params[sliceIdx].getName();
         Collection<?> coll = (Collection<?>) values.get(sliceIdx);
 
-        // Validate element shape (primitives/simple scalars)
         for (Object elem : coll) {
             if (!isSimpleScalar(elem)) {
-                throw new IllegalArgumentException(
-                        "Tool '" + toolName + "' list parameter '" + sliceName + "' contains non-scalar element: "
-                                + (elem == null ? "null" : elem.getClass().getName()));
+                throw new IllegalArgumentException("Tool '" + toolName + "' list parameter '" + sliceName
+                        + "' contains non-scalar element: " + elem.getClass().getName());
             }
         }
 
-        // Create a unit per element
         return coll.stream()
                 .map(item -> new SignatureUnit(toolName, sliceName, item))
                 .collect(Collectors.toList());
     }
 
-    /**
-     * Build a new ToolExecutionRequest from a set of SignatureUnit items that came from the same original request. This
-     * rewrites the single list parameter to the provided items while preserving other arguments.
-     */
+    /** Rebuild a ToolExecutionRequest from a slice of signature units belonging to the same list parameter. */
     public ToolExecutionRequest buildRequestFromUnits(ToolExecutionRequest original, List<SignatureUnit> units) {
         if (units.isEmpty()) return original;
 
         String toolName = original.name();
-        String paramName = units.get(0).paramName();
+        String paramName = units.getFirst().paramName();
 
-        // Ensure all units belong to the same tool/param
         boolean consistent = units.stream()
                 .allMatch(u -> u.toolName().equals(toolName) && u.paramName().equals(paramName));
         if (!consistent) {
@@ -576,7 +460,6 @@ public class ToolRegistry {
             return original;
         }
 
-        // Parse original arguments, replace the list parameter with our new items, preserve others
         try {
             Map<String, Object> args = OBJECT_MAPPER.readValue(
                     original.arguments(), new TypeReference<LinkedHashMap<String, Object>>() {});
